--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "kg_logo_black_192px.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x103"
     },
     {
-      "src": "logo512.png",
+      "src": "kg_logo_black_512px.png",
       "type": "image/png",
       "sizes": "512x512"
     }
