--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "type": "git",
     "url": "https://github.com/mgzzl/kva-react.git"
   },
-  "homepage": "http://keingarten/kva",
   "dependencies": {
     "@pdfme/common": "^4.0.2",
     "@pdfme/generator": "^4.0.2",
@@ -18,7 +17,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.98",
     "@types/pdfmake": "^0.2.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -32,11 +30,14 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "main": "main.ts",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "tsc main.ts && electron main.js",
+    "package": "tsc && npx electron-packager . kg-KVA-generator --platform=win32 --arch=x64 --out=dist --overwrite"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +58,11 @@
     ]
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.7"
+    "@types/electron": "^1.6.10",
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^20.14.8",
+    "electron": "^31.0.2",
+    "electron-packager": "^17.1.2",
+    "ts-node": "^10.9.2"
   }
 }
