--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -33,6 +34,7 @@
   "main": "main.ts",
   "scripts": {
     "start": "react-scripts start",
+    "start:strato": "serve -p 8080 build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
